# aruco_marker_mean

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: markers.yaml
include/aruco_marker_mean/: aruco_marker_mean.h
launch/: aruco.launch
src/: aruco_marker_mean.cpp  callbacks.cpp  main.cpp
